--- a/lovetree/index.html
+++ b/lovetree/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="./index_files/functions.js" charset="utf-8"></script>
     <script type="text/javascript" src="./index_files/love.js" charset="utf-8"></script>
     <script type="text/javascript" src="./config.js"></script>
+
     <style type="text/css">
         <!--
         .STYLE1 {
@@ -27,7 +28,7 @@
 <body>
 
 <img src="https://ajlovechina.github.io/loveBalloon/static/music.png" style="position: fixed;z-index: 10001;top:10px;right:10px;" onclick="let m = document.querySelector('.song-audio-autoplay'); if (m.paused ) {m.play(); this.className = 'rotateImages'} else {m.pause(); this.className = ''}">
-<audio class="song-audio-autoplay" controls loop style="display: none;visibility: hidden">
+<audio class="song-audio-autoplay" controls loop style="display: none;visibility: hidden" autoplay="autoplay">
     <source src="index_files/music.mp3" type="audio/mp3"/>
 </audio>
 <style type="text/css">
