--- a/index.html
+++ b/index.html
@@ -7,3 +7,7 @@
   <li> <a href="http://https://www.palladium.net.cn/">palladium官网</a> </li>
 </ul>
 
+<img src="https://ajlovechina.github.io/loveBalloon/static/music.png" style="position: fixed;z-index: 10001;top:10px;right:10px;" onclick="let m = document.querySelector('.song-audio-autoplay'); if (m.paused ) {m.play(); this.className = 'rotateImages'} else {m.pause(); this.className = ''}">
+<audio class="song-audio-autoplay" controls loop style="display: none;visibility: hidden" autoplay="autoplay">
+    <source src="index_files/music.mp3" type="audio/mp3"/>
+</audio>
